--- a/soap-connect/integration-tests/pom.xml
+++ b/soap-connect/integration-tests/pom.xml
@@ -14,6 +14,8 @@
     <packaging>jar</packaging>
 
     <properties>
+        <surefire.args>${surefire.test.unit.open.args}</surefire.args>
+
         <javaModuleName>org.mule.test.integration.soap.connect</javaModuleName>
         <cxfVersion>3.5.1</cxfVersion>
         <muleSdkApiVersion>0.8.0-SNAPSHOT</muleSdkApiVersion>
